--- a/css/style.css
+++ b/css/style.css
@@ -59,5 +59,54 @@ body {
 
 #next {
     position: ;
-    t
+    top: ;
+    right: ;
+    background-color: ;
+    width: ;
+    height: ;
+    border: ;
+    border-radius: ;
+    padding: ;
+    margin: ;
+    transition: ;
+}
+
+#next:hover {
+    transform: scale(1.3);
+    border-radius: ;
+}
+
+.pic {
+    height: ;
+    transition: ;
+    display: ;
+    margin: ;
+}
+
+h1 {
+    font-family: ;
+    color: ;
+    font-size: ;
+    margin: ;
+}
+
+h2 {
+    font-family: ;
+    color: ;
+    font-size: ;
+    margin: ;
+}
+
+h3 {
+    font-family: ;
+    color: ;
+    font-size: ;
+    margin: ;
+    text-align: ;
+}
+
+p {
+    font-family: ;
+    color: ;
+    font-size: ;
 }
