--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,15 @@
 body {
-    background-color: ;
+    background-color:#f1ba02 ;
 }
 
 .wrapper {
-    background-color: ;
-    width: ;
-    height: ;
-    border: ;
+    background-color:#f8e615;
+    width: 1000px;
+    height: 1100px;
+    border: 5px solid #f42f2a;
     border-radius: ;
     padding: ;
-    margin-left: ;
-    margin-right: ;
+    margin: auto;
     position: ;
 }
 
@@ -27,86 +26,117 @@ body {
 }
 
 .content {
-    background-color: ;
-    width: ;
-    height: ;
-    border: ;
-    border-radius: ;
-    padding: ;
-    margin-left: ;
-    margin-right: ;
-    position: ;
+  width: 900px;
+  margin: auto;
+  margin-top: 50px;
+    border: 5px solid white;
+    border-radius: 25px;
+    background-color: #fff582;
 }
 
 #back {
-  position: ;
-  top: ;
+  position:absolute ;
+ 
   left: ;
-  background-color: ;
-  width: ;
+  background-color:#f1ba02 ;
+  width: 150px;
   height: ;
   border: ;
   border-radius: ;
-  padding: ;
-  margin: ;
+  border: 5px solid #f42f2a;
+    border-radius: 15px;
+   padding: 10px;
+margin: auto;
   transition: ;
+  margin-left: 200px;
+ margin-top: 50px;
+  text-align: center;
+  display: inline-block;
+  
 }
 
 #back:hover {
-    transform: scale(1.3);
-    border-radius: ;
+    transform: scale(1.1);
+    background-color: white;
+    border-radius: 15px;
+
 }
 
 #next {
-    position: ;
-    top: ;
-    right: ;
-    background-color: ;
-    width: ;
+    position: absolute ;
+    top: 30;
+    right:300px ;
+    background-color:#f1ba02 ;
+    width:150px;
     height: ;
     border: ;
     border-radius: ;
     padding: ;
-    margin: ;
+    margin: auto;
+    text-align:center;
+    border: 5px solid #f42f2a;
+    border-radius: 15px;
+   padding: 10px;
     transition: ;
+    display: block;
+    margin-top: 50px;
 }
 
+
 #next:hover {
-    transform: scale(1.3);
-    border-radius: ;
+    transform: scale(1.1);
+    background-color: white;
 }
 
 .pic {
-    height: ;
-    transition: ;
-    display: ;
-    margin: ;
+    height: 400px;
+    display: block;
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 h1 {
-    font-family: ;
+  
     color: ;
-    font-size: ;
-    margin: ;
+    font-size: 45px ;
+    margin: auto;
+    font-family: "nove", sans-serif;
+font-weight: 400;
+font-style: normal;
+text-align: center;
+margin-top: 50px;
 }
 
 h2 {
-    font-family: ;
+    font-family: "informapro", sans-serif;
+font-weight: 700;
+font-style: normal;
     color: ;
-    font-size: ;
-    margin: ;
+    font-size: 37px ;
+    margin: auto;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 h3 {
-    font-family: ;
-    color: ;
-    font-size: ;
-    margin: ;
+    font-family: "nove", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: black;
+    font-size: 40px;
+    margin: auto;
     text-align: ;
 }
 
 p {
-    font-family: ;
+    font-family: "informapro", sans-serif;
+font-weight: 400;
+font-style: normal;
     color: ;
-    font-size: ;
+    font-size: 27px;
+    margin: auto;
+margin-left: 50px;
+margin-right: 50px;
+margin-bottom: 20px;
 }
