--- a/css/style.css
+++ b/css/style.css
@@ -5,30 +5,30 @@ body {
 .wrapper {
     background-color:#f8e615;
     width: 1000px;
-    height: 1100px;
-    border: 5px solid #f42f2a;
-    border-radius: ;
-    padding: ;
+    height: 1150px;
+    border: 5px solid #a40503;
+  
+    
     margin: auto;
-    position: ;
+    
 }
 
 .banner {
-    background-color: ;
+    background-color: #a40503;
     width: ;
-    height: ;
+    height: 150px;
     border: ;
     border-radius: ;
-    padding: ;
-    margin-left: ;
-    margin-right: ;
+   padding-right: 0px;
+   
     position: ;
+    margin: auto;
 }
 
 .content {
   width: 900px;
   margin: auto;
-  margin-top: 50px;
+margin-top: 50px;
     border: 5px solid white;
     border-radius: 25px;
     background-color: #fff582;
@@ -37,17 +37,15 @@ body {
 #back {
   position:absolute ;
  
-  left: ;
+
   background-color:#f1ba02 ;
   width: 150px;
-  height: ;
-  border: ;
-  border-radius: ;
-  border: 5px solid #f42f2a;
+
+  border: 5px solid #a40503;
     border-radius: 15px;
    padding: 10px;
 margin: auto;
-  transition: ;
+
   margin-left: 200px;
  margin-top: 50px;
   text-align: center;
@@ -68,16 +66,13 @@ margin: auto;
     right:300px ;
     background-color:#f1ba02 ;
     width:150px;
-    height: ;
-    border: ;
-    border-radius: ;
-    padding: ;
+ 
     margin: auto;
     text-align:center;
-    border: 5px solid #f42f2a;
+    border: 5px solid #a40503;
     border-radius: 15px;
    padding: 10px;
-    transition: ;
+  
     display: block;
     margin-top: 50px;
 }
@@ -97,26 +92,45 @@ margin: auto;
 
 h1 {
   
-    color: ;
+    color: white;
     font-size: 45px ;
-    margin: auto;
+    margin:0 auto;
     font-family: "nove", sans-serif;
 font-weight: 400;
 font-style: normal;
 text-align: center;
-margin-top: 50px;
+white-space: nowrap;
+
+animation: typing 2.5s steps(40, end), blink-caret .75s step-end infinite;
+padding-top: 50px;
+
+
+overflow: hidden;
+border-right: .15em solid #ffffff;
+}
+
+@keyframes typing {
+    from{width:0}
+    to{width:100%}
+}
+
+@keyframes blink-caret {
+    from, to {border-color: transparent}
+    50% {border-color: #ffffff}
 }
 
 h2 {
     font-family: "informapro", sans-serif;
 font-weight: 700;
 font-style: normal;
-    color: ;
+   
     font-size: 37px ;
     margin: auto;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 h3 {
@@ -126,17 +140,17 @@ h3 {
     color: black;
     font-size: 40px;
     margin: auto;
-    text-align: ;
+   text-align: center;
 }
 
 p {
     font-family: "informapro", sans-serif;
 font-weight: 400;
 font-style: normal;
-    color: ;
+   
     font-size: 27px;
     margin: auto;
 margin-left: 50px;
 margin-right: 50px;
-margin-bottom: 20px;
+margin-bottom: 50px;
 }
