--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,43 @@
 body {
-    background-color:#f1ba02 ;
+    background-color:#d5a401 ;
 }
 
 .wrapper {
-    background-color:#f8e615;
+    background-color:#ffdf28;
     width: 1000px;
     height: 1150px;
     border: 5px solid #a40503;
-  
-    
     margin: auto;
     
 }
 
 .banner {
     background-color: #a40503;
-    width: ;
     height: 150px;
-    border: ;
-    border-radius: ;
    padding-right: 0px;
-   
-    position: ;
     margin: auto;
 }
 
 .content {
   width: 900px;
   margin: auto;
-margin-top: 50px;
-    border: 5px solid white;
+    margin-top: 50px;
+    border: 5px solid white; 
     border-radius: 25px;
-    background-color: #fff582;
+    background-color: #ffe77c;
 }
 
 #back {
   position:absolute ;
- 
-
-  background-color:#f1ba02 ;
+  background-color:#ffe77c ;
   width: 150px;
-
   border: 5px solid #a40503;
     border-radius: 15px;
    padding: 10px;
-margin: auto;
-
-  margin-left: 200px;
- margin-top: 50px;
+    margin: auto;
+    transition: .3s;
+    margin-left: 200px;
+    margin-top: 50px;
   text-align: center;
   display: inline-block;
   
@@ -64,15 +54,14 @@ margin: auto;
     position: absolute ;
     top: 30;
     right:300px ;
-    background-color:#f1ba02 ;
+    background-color:#ffe77c ;
     width:150px;
- 
     margin: auto;
     text-align:center;
     border: 5px solid #a40503;
     border-radius: 15px;
    padding: 10px;
-  
+   transition: .3s;
     display: block;
     margin-top: 50px;
 }
@@ -93,7 +82,7 @@ margin: auto;
 h1 {
   
     color: white;
-    font-size: 45px ;
+    font-size: 46px ;
     margin:0 auto;
     font-family: "nove", sans-serif;
 font-weight: 400;
@@ -101,8 +90,11 @@ font-style: normal;
 text-align: center;
 white-space: nowrap;
 
-animation: typing 2.5s steps(40, end), blink-caret .75s step-end infinite;
+animation: typing 2.5s steps(40, end), blink-caret .75s step-end forwards 3;
 padding-top: 50px;
+
+
+
 
 
 overflow: hidden;
@@ -147,10 +139,9 @@ p {
     font-family: "informapro", sans-serif;
 font-weight: 400;
 font-style: normal;
-   
     font-size: 27px;
     margin: auto;
 margin-left: 50px;
 margin-right: 50px;
-margin-bottom: 50px;
+margin-bottom: 30px;
 }
